--- a/text.html
+++ b/text.html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Text Page</title>
+    <style>
+        /* CSS Styles for the Entire Page */
+        body {
+            background-color: #FFA500; /* The background color of the entire page is set to orange, giving it an eye-catching appearance. */
+        }
 
+        /* CSS Styles for Ugly Buttons */
+        .ugly-button {
+            background-color: #FF0000; /* Ugly buttons have a red background color. */
+            border: 2px solid #000000; /* They are framed with a thick black border, giving them a bold appearance. */
+            padding: 8px 16px; /* The padding inside the buttons is smaller, making them compact. */
+            font-size: 12px; /* The text inside the buttons is relatively small, emphasizing the "ugly" design. */
+            color: #00FF00; /* The text color inside the buttons is bright green, creating a stark contrast. */
+            cursor: crosshair; /* On hover, the cursor changes to a crosshair, adding a playful interaction. */
+            text-decoration: none; /* The buttons have no text decoration by default. */
+            text-align: center; /* The text inside the buttons is centered horizontally. */
+            display: inline-block; /* Buttons are displayed as inline-block elements, allowing them to align horizontally. */
+            border-radius: 50%; /* The buttons are given an oval shape with rounded corners, which is unconventional. */
+            margin: 10px; /* There is margin space around the buttons, providing separation. */
+            text-transform: uppercase; /* The text inside the buttons is transformed to uppercase, making it shouty. */
+        }
+
+        /* Styling on Hover for Ugly Buttons */
+        .ugly-button:hover {
+            background-color: #0000FF; /* When hovered over, the buttons turn blue, creating a dynamic effect. */
+            border: 2px solid #FFFF00; /* A yellow border is added on hover, making the buttons even more conspicuous. */
+            color: #FF00FF; /* The text color becomes magenta on hover, enhancing the color contrast. */
+            text-decoration: underline; /* Text is underlined on hover, providing visual feedback to the user. */
+        }
+
+        /* CSS Styles for Ugly Text */
+        .ugly-text {
+            color: #FF4500; /* Ugly text is colored orange, adding to the vibrant appearance of the page. */
+            font-size: 24px; /* The font size of the text is increased, making it bold and prominent. */
+            text-transform: uppercase; /* Text is transformed to uppercase, contributing to the unconventional style. */
+            text-align: center; /* Text is centered horizontally within its container, providing a neat look. */
+            margin: 20px; /* There is ample margin space around the text, ensuring readability and separation. */
+        }
+
+        /* CSS Styles for Ugly Copyright Notice */
+        .ugly-copyright {
+            color: #800080; /* The copyright notice text is colored purple, creating a distinct separation from the rest of the content. */
+            font-size: 12px; /* The font size is smaller, making it less prominent compared to the main content. */
+            text-align: center; /* The copyright notice is centered horizontally, maintaining alignment with the rest of the page. */
+            margin: 20px; /* Adequate margin space is provided to isolate it from the other elements. */
+        }
+    </style>
+</head>
+<body>
+    <!-- Ugly Text Elements -->
+    <p class="ugly-text">This is Your Ugly Text Page</p>
+    <p class="ugly-text">Fascinating Facts About Electronics and Computers:</p>
+    <p class="ugly-text">Did you know that:</p>
+
+    <!-- Unconventional List of Facts -->
+    <ul class="ugly-text">
+        <li>1. The first computer bug was a real insect - a moth trapped inside a computer, which inspired the term "bug" in computer programming.</li>
+        <li>2. The world's first electronic digital computer, ENIAC, weighed over 27 tons and occupied a large room.</li>
+        <li>3. The term "byte" was coined by Dr. Werner Buchholz in 1956 to represent a group of binary digits, typically 8 bits.</li>
+        <li>4. The first computer mouse was made of wood and had two wheels.</li>
+        <li>5. The Apollo 11 mission's guidance computer had less processing power than a modern smartphone.</li>
+        <li>6. Computers use billions of transistors, which are tiny electronic switches, to perform calculations.</li>
+        <li>7. The first electronic digital computer game, "Spacewar!," was created in 1962 by Steve Russell and became the precursor to modern video games.</li>
+        <li>8. The concept of a computer "virus" was coined by Frederick Cohen in 1983 to describe a self-replicating program.</li>
+        <li>9. The World Wide Web (WWW) was invented by Sir Tim Berners-Lee in 1989 while working at CERN.</li>
+        <li>10. The first webcam was used to monitor a coffee pot in the computer science department at Cambridge University in 1991.</li>
+    </ul>
+
+    <!-- Back to Index Button -->
+    <a href="index.html" class="ugly-button">Back to Index</a>
+
+    <!-- Ugly Copyright Notice -->
+    <p class="ugly-copyright">&copy; 2023 Ugly Website. All rights reserved.</p>
+</body>
+</html>
