--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <p class="ugly-text">Welcome to our Ugly Website</p>
-    <a href="page1.html" class="ugly-button">Button 1</a>
+    <a href="text.html" class="ugly-button">Button 1</a>
     <a href="page2.html" class="ugly-button">Button 2</a>
     <a href="page3.html" class="ugly-button">Button 3</a>
     <p class="ugly-copyright">&copy; 2023 Ugly Website. All rights reserved.</p>
