--- a/text.html
+++ b/text.html
@@ -73,7 +73,7 @@
     </ul>
 
     <!-- Back to Index Button -->
-    <a href="index.html" class="ugly-button">Back to Index</a>
+    <a href="index.html" class="ugly-button">Back to home</a>
 
     <!-- Ugly Copyright Notice -->
     <p class="ugly-copyright">&copy; 2023 Ugly Website. All rights reserved.</p>
