--- a/text2.html
+++ b/text2.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Second Ugly Website</title>
+    <style>
+        /* Ugly Background Color */
+        body {
+            background-color: #FFA500; /* The entire page has a background color of orange, ensuring that it stands out. */
+        }
 
+        /* Ugly Button Styles (Consistent with the First Ugly Website) */
+        .ugly-button {
+            background-color: #FF0000; /* Ugly buttons feature a red background, giving them a bold and distinctive appearance. */
+            border: 2px solid #000000; /* The buttons are surrounded by a thick black border, emphasizing their presence. */
+            padding: 8px 16px; /* The padding within the buttons is relatively small, maintaining the "ugly" style. */
+            font-size: 12px; /* The text inside the buttons is set to a smaller font size, making it stand out. */
+            color: #00FF00; /* The text color inside the buttons is a bright green, creating a strong contrast. */
+            cursor: crosshair; /* On hover, the cursor changes to a crosshair, adding a playful interaction. */
+            text-decoration: none; /* There is no text decoration on the buttons, keeping them simple. */
+            text-align: center; /* The text inside the buttons is centered horizontally. */
+            display: inline-block; /* Buttons are displayed as inline-block elements, allowing them to align horizontally. */
+            border-radius: 50%; /* The buttons have an oval shape with rounded corners, making them unconventional. */
+            margin: 10px; /* There is a margin space around the buttons for separation. */
+            text-transform: uppercase; /* The text inside the buttons is transformed to uppercase, making it more prominent. */
+        }
+
+        /* Button Styling on Hover (Consistent with the First Ugly Website) */
+        .ugly-button:hover {
+            background-color: #0000FF; /* On hover, the buttons turn blue, creating a dynamic effect. */
+            border: 2px solid #FFFF00; /* A yellow border is added on hover, making the buttons even more conspicuous. */
+            color: #FF00FF; /* The text color becomes magenta on hover, enhancing the color contrast. */
+            text-decoration: underline; /* Text is underlined on hover, providing visual feedback to the user. */
+        }
+
+        /* Ugly Text Styles (Consistent with the First Ugly Website) */
+        .ugly-text {
+            color: #FF4500; /* Text color for this section is set to orange, maintaining the consistent style. */
+            font-size: 24px; /* The text is displayed in a larger font size, making it bold and prominent. */
+            text-transform: uppercase; /* Text is transformed to uppercase, adding to the unconventional style. */
+            text-align: center; /* The text is centered horizontally within its container. */
+            margin: 20px; /* There is ample margin space around the text, ensuring readability and separation. */
+        }
+
+        /* Ugly Copyright Notice (Consistent with the First Ugly Website) */
+        .ugly-copyright {
+            color: #800080; /* The copyright notice text is colored purple, creating a distinct separation from the rest of the content. */
+            font-size: 12px; /* The font size is smaller, making it less prominent compared to the main content. */
+            text-align: center; /* The copyright notice is centered horizontally, maintaining alignment with the rest of the page. */
+            margin: 20px; /* Adequate margin space is provided to isolate it from the other elements. */
+        }
+    </style>
+</head>
+<body>
+    <!-- Ugly Text Elements -->
+    <p class="ugly-text">Welcome to Your Second Ugly Website</p>
+    <p class "ugly-text">Fascinating Facts About Computer Viruses and Malware:</p>
+
+    <!-- List of Unconventional Facts -->
+    <ul class="ugly-text">
+        <li>1. The first computer virus, known as the "Creeper" virus, was developed in the early 1970s and ran on the TENEX operating system.</li>
+        <li>2. The term "malware" is a combination of "malicious" and "software" and refers to any software designed to harm or exploit computer systems.</li>
+        <li>3. The "ILOVEYOU" virus in 2000 was one of the most destructive email viruses, causing billions of dollars in damages worldwide.</li>
+        <li>4. Antivirus software, such as Norton and McAfee, is designed to detect and remove viruses and malware from computer systems.</li>
+        <li>5. Worms, Trojans, and ransomware are common types of malware, each with different methods and objectives.</li>
+    </ul>
+
+    <!-- Ugly Buttons with Distinct Purposes -->
+    <a href="index.html" class="ugly-button">Back to the home</a>
+
+    <!-- Ugly Copyright Notice -->
+    <p class="ugly-copyright">&copy; 2023 Ugly Website. All rights reserved.</p>
+</body>
+</html>
