--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 </head>
 <body>
     <p class="ugly-text">Welcome to our Ugly Website</p>
-    <a href="text.html" class="ugly-button">Wiki</a>
-    <a href="page2.html" class="ugly-button">Button 2</a>
+    <a href="text.html" class="ugly-button">coputer Wiki</a>
+    <a href="text2.html" class="ugly-button">virus wiki</a>
     <a href="page3.html" class="ugly-button">Button 3</a>
     <p class="ugly-copyright">&copy; 2023 Ugly Website. All rights reserved.</p>
 </body>
