--- a/text2.html
+++ b/text2.html
@@ -55,7 +55,7 @@
 <body>
     <!-- Ugly Text Elements -->
     <p class="ugly-text">Welcome to Your Second Ugly Website</p>
-    <p class "ugly-text">Fascinating Facts About Computer Viruses and Malware:</p>
+    <p class="ugly-text">Fascinating Facts About Computer Viruses and Malware:</p>
 
     <!-- List of Unconventional Facts -->
     <ul class="ugly-text">
