--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p class="ugly-text">Welcome to our Ugly Website</p>
     <a href="text.html" class="ugly-button">coputer Wiki</a>
     <a href="text2.html" class="ugly-button">virus wiki</a>
-    <a href="page3.html" class="ugly-button">cyber wiki</a>
+    <a href="text3.html" class="ugly-button">cyber wiki</a>
     <p class="ugly-copyright">&copy; 2023 Ugly Website. All rights reserved.</p>
 </body>
 </html>
