--- a/text2.html
+++ b/text2.html
@@ -67,7 +67,7 @@
     </ul>
 
     <!-- Ugly Buttons with Distinct Purposes -->
-    <a href="index.html" class="ugly-button">Back to the home</a>
+    <a href="index.html" class="ugly-button">Back to home</a>
 
     <!-- Ugly Copyright Notice -->
     <p class="ugly-copyright">&copy; 2023 Ugly Website. All rights reserved.</p>
