--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <a href="text.html" class="ugly-button">coputer Wiki</a>
     <a href="text2.html" class="ugly-button">virus wiki</a>
     <a href="text3.html" class="ugly-button">cyber wiki</a>
+    <a href="code1.html" class="ugly-button">lern programing</a>
     <p class="ugly-copyright">&copy; 2023 Ugly Website. All rights reserved.</p>
 </body>
 </html>
