--- a/code1.html
+++ b/code1.html
@@ -72,7 +72,7 @@
     <p class="ugly-text">Welcome to our Ugly Website</p>
 
     <a href="index.html" class="ugly-button">Back to home page</a>
-    <a href="" class="ugly-button">..</a>
+    <a href="code2.html" class="ugly-button">python</a>
     <a href="" class="ugly-button">..</a>
 
     <div id="html-section" class="code-example">
