--- a/text3.html
+++ b/text3.html
@@ -3,109 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Uglier Website</title>
+    <title>Your Third Ugly Website</title>
     <style>
-        /* Set an ugly background color for the entire site */
+        /* Ugly Background Color */
         body {
-            background-color: #FFA500; /* Orange background color */
+            background-color: #FFA500; /* The entire page has a background color of orange, ensuring that it stands out. */
         }
 
-        /* CSS styles for ugly buttons */
+        /* Ugly Button Styles (Consistent with the Previous Ugly Websites) */
         .ugly-button {
-            background-color: #FF0000; /* Red background color */
-            border: 2px solid #000000; /* Thick black border */
-            padding: 8px 16px; /* Smaller padding */
-            font-size: 12px; /* Smaller font size */
-            color: #00FF00; /* Green text color */
-            cursor: crosshair; /* Crosshair cursor on hover */
-            text-decoration: none;
-            text-align: center;
-            display: inline-block;
-            border-radius: 50%; /* Oval shape */
-            margin: 10px;
-            text-transform: uppercase; /* Uppercase text */
+            background-color: #FF0000; /* Ugly buttons feature a red background, giving them a bold and distinctive appearance. */
+            border: 2px solid #000000; /* The buttons are surrounded by a thick black border, emphasizing their presence. */
+            padding: 8px 16px; /* The padding within the buttons is relatively small, maintaining the "ugly" style. */
+            font-size: 12px; /* The text inside the buttons is set to a smaller font size, making it stand out. */
+            color: #00FF00; /* The text color inside the buttons is a bright green, creating a strong contrast. */
+            cursor: crosshair; /* On hover, the cursor changes to a crosshair, adding a playful interaction. */
+            text-decoration: none; /* There is no text decoration on the buttons, keeping them simple. */
+            text-align: center; /* The text inside the buttons is centered horizontally. */
+            display: inline-block; /* Buttons are displayed as inline-block elements, allowing them to align horizontally. */
+            border-radius: 50%; /* The buttons have an oval shape with rounded corners, making them unconventional. */
+            margin: 10px; /* There is a margin space around the buttons for separation. */
+            text-transform: uppercase; /* The text inside the buttons is transformed to uppercase, making it more prominent. */
         }
 
-        /* Styling on hover for ugly buttons */
+        /* Button Styling on Hover (Consistent with the Previous Ugly Websites) */
         .ugly-button:hover {
-            background-color: #0000FF; /* Blue background color on hover */
-            border: 2px solid #FFFF00; /* Yellow border on hover */
-            color: #FF00FF; /* Magenta text color on hover */
-            text-decoration: underline; /* Underline text on hover */
+            background-color: #0000FF; /* On hover, the buttons turn blue, creating a dynamic effect. */
+            border: 2px solid #FFFF00; /* A yellow border is added on hover, making the buttons even more conspicuous. */
+            color: #FF00FF; /* The text color becomes magenta on hover, enhancing the color contrast. */
+            text-decoration: underline; /* Text is underlined on hover, providing visual feedback to the user. */
         }
 
-        /* Styling for ugly text */
+        /* Ugly Text Styles (Consistent with the Previous Ugly Websites) */
         .ugly-text {
-            color: #FF4500; /* Orange text color */
-            font-size: 24px; /* Larger font size */
-            text-transform: uppercase; /* Uppercase text */
-            text-align: center;
-            margin: 20px;
+            color: #FF4500; /* Text color for this section is set to orange, maintaining the consistent style. */
+            font-size: 24px; /* The text is displayed in a larger font size, making it bold and prominent. */
+            text-transform: uppercase; /* Text is transformed to uppercase, adding to the unconventional style. */
+            text-align: center; /* The text is centered horizontally within its container. */
+            margin: 20px; /* There is ample margin space around the text, ensuring readability and separation. */
         }
 
-        /* Styling for ugly copyright notice */
+        /* Ugly Copyright Notice (Consistent with the Previous Ugly Websites) */
         .ugly-copyright {
-            color: #800080; /* Purple text color */
-            font-size: 12px;
-            text-align: center;
-            margin: 20px;
-        }
-
-        /* Styling for the code examples */
-        .code-example {
-            background-color: #FFD700; /* Gold background color */
-            border: 2px solid #000000; /* Black border */
-            padding: 20px;
-            margin: 20px;
-            border-radius: 10px; /* Rounded corners */
-            overflow-x: auto; /* Add horizontal scrollbar if needed */
-        }
-
-        /* Styling for the code inside pre tags */
-        pre {
-            white-space: pre-wrap; /* Preserve whitespace and wrap lines */
-            font-family: 'Courier New', monospace; /* Monospace font for code */
+            color: #800080; /* The copyright notice text is colored purple, creating a distinct separation from the rest of the content. */
+            font-size: 12px; /* The font size is smaller, making it less prominent compared to the main content. */
+            text-align: center; /* The copyright notice is centered horizontally, maintaining alignment with the rest of the page. */
+            margin: 20px; /* Adequate margin space is provided to isolate it from the other elements. */
         }
     </style>
 </head>
 <body>
-    <p class="ugly-text">Welcome to our Ugly Website</p>
+    <!-- Ugly Text Elements -->
+    <p class="ugly-text">Welcome to cybersecurity wiki</p>
+    <p class="ugly-text">Important Facts About Cybersecurity:</p>
 
-    <a href="index.html" class="ugly-button">Back to home page</a>
-   
-    <div id="java-section" class="code-example">
-        <h2 class="ugly-text">Java Basics</h2>
-        <p>Java is a high-level, class-based, object-oriented programming language designed to have as few implementation dependencies as possible.</p>
-        <p>Example:</p>
-        <pre>
-            <code>
-                // Print Hello, World! to the console
-                public class HelloWorld {
-                    public static void main(String[] args) {
-                        System.out.println("Hello, World!");
-                    }
-                }
-
-                // Variables and basic operations
-                public class BasicOperations {
-                    public static void main(String[] args) {
-                        int x = 5;
-                        int y = 10;
-                        int z = x + y;
-                        System.out.println("Sum: " + z);
-
-                        // Conditional statements
-                        if (x > y) {
-                            System.out.println("x is greater than y");
-                        } else {
-                            System.out.println("y is greater than x");
-                        }
-                    }
-                }
-            </code>
-        </pre>
+    <!-- List of Unconventional Cybersecurity Facts -->
+    <ul class="ugly-text">
+        <li>1. Cybersecurity is the practice of protecting systems, networks, and programs from digital attacks, damage, or unauthorized access.</li>
+        <li>2. Common cybersecurity measures include the use of firewalls, antivirus software, and encryption to secure data and prevent unauthorized access.</li>
+        <li>3. Phishing is a prevalent cyber attack where attackers use deceptive emails or messages to trick individuals into revealing sensitive information.</li>
+        <li>4. Multi-factor authentication (MFA) adds an extra layer of security by requiring users to provide multiple forms of identification before granting access.</li>
+        <li>5. Cybersecurity professionals play a crucial role in safeguarding information and responding to security incidents.</li>
+    </ul>
+  
+   <div class="ugly-text">
+        <p>Cybersecurity is an ever-evolving field that constantly adapts to new threats and technologies. As technology advances, so do the methods and tactics of cyber attackers.</p>
+        <p>The use of strong and unique passwords, regular software updates, and employee training are crucial components of a robust cybersecurity strategy.</p>
+        <p>One of the emerging challenges in cybersecurity is the rise of ransomware attacks, where cybercriminals encrypt a user's files and demand payment for their release.</p>
+        <p>As our lives become more digitally interconnected, the importance of cybersecurity extends beyond individual users to businesses, governments, and global organizations.</p>
+        <p>Continuous vigilance and proactive measures are essential to staying ahead in the cat-and-mouse game between cybersecurity professionals and cyber threats.</p>
     </div>
 
+    <!-- Ugly Buttons with Distinct Purposes -->
+    <a href="index.html" class="ugly-button">Back to the home</a>
+
+  
+    <!-- Ugly Copyright Notice -->
     <p class="ugly-copyright">&copy; 2024 Ugly Website. All rights reserved.</p>
 </body>
 </html>
