--- a/code1.html
+++ b/code1.html
@@ -73,7 +73,7 @@
 
     <a href="index.html" class="ugly-button">Back to home page</a>
     <a href="code2.html" class="ugly-button">python</a>
-    <a href="" class="ugly-button">..</a>
+    <a href="code3.html" class="ugly-button">Java</a>
 
     <div id="html-section" class="code-example">
         <h2 class="ugly-text">HTML Basics</h2>
