--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
 </head>
 <body>
     <p class="ugly-text">Welcome to our Ugly Website</p>
-    <a href="text.html" class="ugly-button">coputer Wiki</a>
+    <a href="text.html" class="ugly-button">computer Wiki</a>
     <a href="text2.html" class="ugly-button">virus wiki</a>
     <a href="text3.html" class="ugly-button">cyber wiki</a>
-    <a href="code1.html" class="ugly-button">learn programing</a>
+    <a href="code1.html" class="ugly-button">learn programming</a>
+    <a href="text4.html" class="ugly-button">security tips</a>
+    <a href="text5.html" class="ugly-button">about us</a>
     <p class="ugly-copyright">&copy; 2024 Ugly Website. All rights reserved.</p>
 </body>
 </html>
