--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <a href="text2.html" class="ugly-button">virus wiki</a>
     <a href="text3.html" class="ugly-button">cyber wiki</a>
     <a href="code1.html" class="ugly-button">learn programming</a>
-    <a href="text4.html" class="ugly-button">security tips</a>
-    <a href="text5.html" class="ugly-button">about us</a>
+    <a href="..." class="ugly-button">...</a>
+    <a href="..." class="ugly-button">...</a>
     <p class="ugly-copyright">&copy; 2024 Ugly Website. All rights reserved.</p>
 </body>
 </html>
