--- a/code1.html
+++ b/code1.html
@@ -74,8 +74,8 @@
     <a href="index.html" class="ugly-button">Back to home page</a>
     <a href="code2.html" class="ugly-button">python</a>
     <a href="code3.html" class="ugly-button">Java</a>
-    <a href="code4.html" class="ugly-button">...</a>
-    <a href="code5.html" class="ugly-button">...</a>
+    <a href="code4.html" class="ugly-button">C++</a>
+    <a href="code5.html" class="ugly-button">Lua</a>
     <a href="code6.html" class="ugly-button">...</a>
 
     <div id="html-section" class="code-example">
