--- a/code1.html
+++ b/code1.html
@@ -76,7 +76,7 @@
     <a href="code3.html" class="ugly-button">Java</a>
     <a href="code4.html" class="ugly-button">C++</a>
     <a href="code5.html" class="ugly-button">Lua</a>
-    <a href="code6.html" class="ugly-button">...</a>
+    <a href="ruby.html" class="ugly-button">Ruby</a>
 
     <div id="html-section" class="code-example">
         <h2 class="ugly-text">HTML Basics</h2>
