--- a/code1.html
+++ b/code1.html
@@ -72,10 +72,10 @@
     <p class="ugly-text">Welcome to our Ugly Website</p>
 
     <a href="index.html" class="ugly-button">Back to home page</a>
-    <a href="code2.html" class="ugly-button">python</a>
-    <a href="code3.html" class="ugly-button">Java</a>
-    <a href="code4.html" class="ugly-button">C++</a>
-    <a href="code5.html" class="ugly-button">Lua</a>
+    <a href="python.html" class="ugly-button">python</a>
+    <a href="java.html" class="ugly-button">Java</a>
+    <a href="c++.html" class="ugly-button">C++</a>
+    <a href="lua.html" class="ugly-button">Lua</a>
     <a href="ruby.html" class="ugly-button">Ruby</a>
 
     <div id="html-section" class="code-example">
