--- a/rust.html
+++ b/rust.html
@@ -1,1 +1,107 @@
-rust test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Uglier Website</title>
+    <style>
+        /* Set an ugly background color for the entire site */
+        body {
+            background-color: #FFA500; /* Orange background color */
+        }
+
+        /* CSS styles for ugly buttons */
+        .ugly-button {
+            background-color: #FF0000; /* Red background color */
+            border: 2px solid #000000; /* Thick black border */
+            padding: 8px 16px; /* Smaller padding */
+            font-size: 12px; /* Smaller font size */
+            color: #00FF00; /* Green text color */
+            cursor: crosshair; /* Crosshair cursor on hover */
+            text-decoration: none;
+            text-align: center;
+            display: inline-block;
+            border-radius: 50%; /* Oval shape */
+            margin: 10px;
+            text-transform: uppercase; /* Uppercase text */
+        }
+
+        /* Styling on hover for ugly buttons */
+        .ugly-button:hover {
+            background-color: #0000FF; /* Blue background color on hover */
+            border: 2px solid #FFFF00; /* Yellow border on hover */
+            color: #FF00FF; /* Magenta text color on hover */
+            text-decoration: underline; /* Underline text on hover */
+        }
+
+        /* Styling for ugly text */
+        .ugly-text {
+            color: #FF4500; /* Orange text color */
+            font-size: 24px; /* Larger font size */
+            text-transform: uppercase; /* Uppercase text */
+            text-align: center;
+            margin: 20px;
+        }
+
+        /* Styling for ugly copyright notice */
+        .ugly-copyright {
+            color: #800080; /* Purple text color */
+            font-size: 12px;
+            text-align: center;
+            margin: 20px;
+        }
+
+        /* Styling for the code examples */
+        .code-example {
+            background-color: #FFD700; /* Gold background color */
+            border: 2px solid #000000; /* Black border */
+            padding: 20px;
+            margin: 20px;
+            border-radius: 10px; /* Rounded corners */
+            overflow-x: auto; /* Add horizontal scrollbar if needed */
+        }
+
+        /* Styling for the code inside pre tags */
+        pre {
+            white-space: pre-wrap; /* Preserve whitespace and wrap lines */
+            font-family: 'Courier New', monospace; /* Monospace font for code */
+        }
+    </style>
+</head>
+<body>
+    <p class="ugly-text">Welcome to our Ugly Website</p>
+
+    <a href="index.html" class="ugly-button">Back to home page</a>
+   
+    <div id="rust-section" class="code-example">
+        <h2 class="ugly-text">Rust Basics</h2>
+        <p>Rust is a systems programming language focused on safety, speed, and concurrency.</p>
+        <p>Example:</p>
+        <pre>
+            <code>
+                // Print Hello, World! to the console
+                fn main() {
+                    println!("Hello, World!");
+                }
+
+                // Variables and basic operations
+                fn main() {
+                    let x = 5;
+                    let y = 10;
+                    let z = x + y;
+                    println!("Sum: {}", z);
+
+                    // Conditional statements
+                    if x > y {
+                        println!("x is greater than y");
+                    } else {
+                        println!("y is greater than x");
+                    }
+                }
+            </code>
+        </pre>
+    </div>
+
+    <p class="ugly-copyright">&copy; 2024 Ugly Website. All rights reserved.</p>
+</body>
+</html>
