--- a/code1.html
+++ b/code1.html
@@ -77,7 +77,7 @@
     <a href="c++.html" class="ugly-button">C++</a>
     <a href="lua.html" class="ugly-button">Lua</a>
     <a href="ruby.html" class="ugly-button">Ruby</a>
-    <a href="Rust.html" class="ugly-button">Rust</a>
+    <a href="rust.html" class="ugly-button">Rust</a>
     <a href=".html" class="ugly-button">...</a>
     <a href=".html" class="ugly-button">...</a>
     <a href=".html" class="ugly-button">...</a>
