--- a/code1.html
+++ b/code1.html
@@ -78,7 +78,7 @@
     <a href="lua.html" class="ugly-button">Lua</a>
     <a href="ruby.html" class="ugly-button">Ruby</a>
     <a href="rust.html" class="ugly-button">Rust</a>
-    <a href=".html" class="ugly-button">...</a>
+    <a href="swift.html" class="ugly-button">Swift</a>
     <a href=".html" class="ugly-button">...</a>
     <a href=".html" class="ugly-button">...</a>
 
