--- a/code1.html
+++ b/code1.html
@@ -79,7 +79,7 @@
     <a href="ruby.html" class="ugly-button">Ruby</a>
     <a href="rust.html" class="ugly-button">Rust</a>
     <a href="swift.html" class="ugly-button">Swift</a>
-    <a href=".html" class="ugly-button">...</a>
+    <a href="matlab.html" class="ugly-button">Matlab</a>
     <a href=".html" class="ugly-button">...</a>
 
     <div id="html-section" class="code-example">
